<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="cr.ac.ucr.proyecto2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="cr.ac.ucr.proyecto2.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/atractivosFragment"
        android:name="cr.ac.ucr.proyecto2.AtractivosFragment"
        android:label="@string/menu_atractivos"
        tools:layout="@layout/fragment_atractivos" />
    <fragment
        android:id="@+id/hotelesFragment"
        android:name="cr.ac.ucr.proyecto2.HotelesFragment"
        android:label="@string/menu_hotel"
        tools:layout="@layout/fragment_hoteles" />
    <fragment
        android:id="@+id/renCarFragment"
        android:name="cr.ac.ucr.proyecto2.RenCarFragment"
        android:label="@string/menu_car"
        tools:layout="@layout/fragment_ren_car" />
    <fragment
        android:id="@+id/tipsFragment"
        android:name="cr.ac.ucr.proyecto2.TipsFragment"
        android:label="@string/menu_tips"
        tools:layout="@layout/fragment_tips" />
    <fragment
        android:id="@+id/aboutUsFragment"
        android:name="cr.ac.ucr.proyecto2.AboutUsFragment"
        android:label="@string/menu_aboutUs"
        tools:layout="@layout/fragment_about_us" />
</navigation>